# K9

./: .env.example  .gitignore  .replit  ADMIN_PERMISSIONS_FIX_SUMMARY.md  COMPREHENSIVE_TEST_SUMMARY.md  DEPLOYMENT.md  IMPORT_GUIDE.md  K9_SYSTEM_DOCUMENTATION.md  K9_Technical_Documentation.md  LOGIN_CREDENTIALS.md  MIGRATION_GUIDE_USER_EMPLOYEE_ENFORCEMENT.md  PERMISSION_SYSTEM_ROADMAP.md  PM_DASHBOARD_IMPROVEMENTS.md  QUICKSTART.md  README.md  REPORTING_SYSTEM_ENHANCEMENT_PROMPT.md  SCHEDULE_SYSTEM_COMPREHENSIVE_REPORT_AR.md  SECURITY_GUIDELINES.md  SEED_DATA_README.md  SETUP.md  STEP_1_VALIDATION_SUMMARY.md  STEP_8_TASK_PERMISSIONS_UPDATE_SUMMARY.md  TEST_RESULTS.md  all_pages_and_routes.json  api_cleaning.py  api_deworming.py  api_excretion.py  api_routes.py  api_routes_backup.py  app.py  attendance_reporting_api.py  attendance_reporting_constants.py  attendance_reporting_exporters.py  attendance_reporting_services.py  attendance_service.py  auth.py  config.py  cookies.txt  create_admin.py  create_admin_user.py  (+92 more)
app/: models_attendance_reporting.py
attached_assets/: Pasted---1756662152461_1756662152462.txt  Pasted---1762804449822_1762804449822.txt  Pasted---1762890487641_1762890487642.txt  Pasted---1762893865498_1762893865500.txt  Pasted---1762900651311_1762900651313.txt  Pasted---1762906436258_1762906436259.txt  Pasted---1762909089182_1762909089183.txt  Pasted---1762913204396_1762913204397.txt  Pasted---1763074140128_1763074140129.txt  Pasted---1763334151648_1763334151649.txt  Pasted---1763337727913_1763337727914.txt  Pasted---1763341061196_1763341061197.txt  (+79 more)
(+472 files in other folders)
